--- a/src/app/manage/manage-rental/manage-rental.component.html
+++ b/src/app/manage/manage-rental/manage-rental.component.html
@@ -17,6 +17,7 @@
                         *ngIf="rentalDeleteIndex !== i"
                         type="button" 
                         class="btn btn-bwm btn-delete">Delete</button> <!-- Delete Rental Button -->
+               <a class="btn btn-warning btn-edit" routerLink="/rentals/{{rental._id}}/edit">Edit</a>                        
                <div *ngIf="rentalDeleteIndex === i">
                   <p class="confirm-message">Confirm delete?</p>
                   <button (click)="deleteRental(rental._id)" 
