--- a/src/app/rental/rental-create/rental-create.component.html
+++ b/src/app/rental/rental-create/rental-create.component.html
@@ -47,13 +47,9 @@
             </div>
   
             <div class="form-group">
-              <label for="image">Image</label>
-              <input type="file"
-                     name="image"
-                     class="form-control"
-                     id="image"
-                     placeholder="Upload file..."
-                     (change)="handleImageChange()">
+              <bwm-image-upload (imageUploaded)="handleImageUpload($event)"
+                                (imageError)="handleImageError()">
+              </bwm-image-upload>
             </div>
   
             <div class="form-group">
@@ -104,7 +100,7 @@
                      >
             </div>
             <button (click)="createRental()" 
-                    [disabled]="!rentalForm.form.valid"
+                    [disabled]="!rentalForm.form.valid || !newRental.image"
                      type="button" 
                      class="btn btn-bwm">Submit</button>
           </form>
